Refactor: QA Review

--- a/src/blocks/Login/login.scss
+++ b/src/blocks/Login/login.scss
@@ -22,6 +22,10 @@
       }
     }
 
+    &__forgot-password {
+      padding-top: $spacing_1_2;
+    }
+
     &__content-item {
       text-align: center;
       display: flex;
