Refactor: QA review

--- a/src/blocks/RegisterAboutYou/register-about-you.scss
+++ b/src/blocks/RegisterAboutYou/register-about-you.scss
@@ -1,6 +1,7 @@
 @import "@USupport-components-library/styles";
 
 .register-about-you {
+  padding-top: $spacing_3_2;
   height: 100%;
 
   & .container {
