--- a/src/pages/RegisterAboutYou/register-about-you.scss
+++ b/src/pages/RegisterAboutYou/register-about-you.scss
@@ -4,6 +4,11 @@
 .page__register-about-you {
   min-height: 100vh;
 
+  & > .radial-background {
+    top: 5%;
+    left: -7%;
+  }
+
   @media screen and (max-width: $screen-md) {
     background-image: url(../assets/background-spiral.png);
     background-repeat: no-repeat;
