Refactor: change path to the background image in the login.scss

--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
 
   @media screen and (max-width: $screen-md) {
-    background-image: url(./assets/background.png);
+    background-image: url(../assets/background-spiral.png);
     background-repeat: no-repeat;
     background-position: right bottom;
   }
