--- a/src/pages/RegisterAnonymous/register-anonymous.scss
+++ b/src/pages/RegisterAnonymous/register-anonymous.scss
@@ -3,4 +3,15 @@
 
 .page__register-anonymous {
   min-height: 100vh;
+
+  & > .radial-background {
+    top: 5%;
+    left: -7%;
+  }
+
+  @media screen and (max-width: $screen-md) {
+    background-image: url(../assets/background-spiral.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+  }
 }
