--- a/src/pages/RegisterSupport/register-support.scss
+++ b/src/pages/RegisterSupport/register-support.scss
@@ -2,5 +2,11 @@
 @import "@USupport-components-library/styles";
 
 .page__register-support {
-  max-height: 100vh;
+  min-height: 100vh;
+
+  @media screen and (max-width: $screen-md) {
+    background-image: url(../assets/background-spiral.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+  }
 }
