--- a/src/blocks/RegisterAnonymous/register-anonymous.scss
+++ b/src/blocks/RegisterAnonymous/register-anonymous.scss
@@ -1,14 +1,19 @@
 @import "@USupport-components-library/styles";
 
 .register-anonymous {
-  height: 100%;
+  // 100vh - height of header - the padding-top
+  height: calc(100vh - $spacing_12_0);
+
+  @media screen and (min-width: $screen_md) {
+    height: calc(100vh - $spacing_12_8);
+  }
 
   & .container {
     height: 100%;
   }
 
   &__grid {
-    min-height: 85vh;
+    height: 100%;
     justify-items: center;
     text-align: left;
 
@@ -21,6 +26,10 @@
       &__main-component {
         margin-top: $spacing_4_0;
 
+        &__code-text {
+          color: $color_blue_3d527b;
+        }
+
         &__anonymous-code-container {
           display: flex;
           flex-direction: row;
@@ -31,11 +40,20 @@
           margin-bottom: $spacing_3_6;
         }
 
+        &__copy-icon {
+          margin-left: $spacing_1_2;
+          cursor: pointer;
+        }
+
         &__privacy_policy_container {
           margin-top: $spacing_2_0;
           display: flex;
           flex-direction: row;
           align-items: flex-start;
+
+          & > .checkbox-wrapper {
+            margin-top: $spacing_0_2;
+          }
 
           & > .text {
             margin-left: $spacing_0_8;
@@ -55,5 +73,9 @@
         }
       }
     }
+  }
+
+  &__redirect-button {
+    margin-bottom: $spacing_2_4;
   }
 }
