Refactor: QA review

--- a/src/blocks/ForgotPassword/forgot-password.scss
+++ b/src/blocks/ForgotPassword/forgot-password.scss
@@ -1,14 +1,15 @@
 @import "@USupport-components-library/styles";
 
 .forgot-password {
-  height: 100%;
+  // 100vh - height of header - margin-top of main-container
+  height: calc(100vh - $spacing_10_0 - $spacing_4_0);
 
   & .container {
     height: 100%;
   }
 
   &__grid {
-    min-height: 85vh;
+    height: 100%;
     justify-items: center;
 
     &__content-item {
