--- a/src/blocks/GiveSuggestion/give-suggestion.scss
+++ b/src/blocks/GiveSuggestion/give-suggestion.scss
@@ -7,10 +7,26 @@
   }
   &__grid {
     justify-items: center;
+  }
 
-    &__textarea-item {
-      @media screen and (min-width: $screen_md) {
-        padding-top: $spacing_2_4;
+  &__heading-item {
+    @media screen and (min-width: $screen_md) {
+      justify-self: left;
+    }
+  }
+
+  &__subheading-item {
+    text-align: center;
+    @media screen and (min-width: $screen_md) {
+      text-align: left;
+    }
+  }
+
+  &__textarea-item {
+    @media screen and (min-width: $screen_md) {
+      padding-top: $spacing_2_4;
+      .textarea--container {
+        width: 56rem;
       }
     }
   }
