Refactor: place the headingButton at the end in Page component

--- a/src/blocks/Page/page.scss
+++ b/src/blocks/Page/page.scss
@@ -50,6 +50,12 @@
       }
     }
 
+    &-button-container {
+      display: flex;
+      flex: 1;
+      justify-content: flex-end;
+    }
+
     &-icon {
       cursor: pointer;
       margin-right: $spacing_2_4;
