Refactor: RegistrationPreview page and block renamed to RegisterPreview

--- a/src/pages/RegistrationPreview/register-preview.scss
+++ b/src/pages/RegistrationPreview/register-preview.scss
@@ -1,7 +1,7 @@
-/* RegistrationPreview styles */
+/* RegisterPreview styles */
 @import "@USupport-components-library/styles";
 
-.page__registration-preview {
+.page__register-preview {
   min-height: 100vh;
 
   @media screen and (max-width: $screen_md) {
