--- a/src/blocks/ForgotPassword/forgot-password.scss
+++ b/src/blocks/ForgotPassword/forgot-password.scss
@@ -2,7 +2,7 @@
 
 .forgot-password {
   // 100vh - height of header - margin-top of main-container
-  height: calc(100vh - $spacing_10_0 - $spacing_4_0);
+  @include full-height-page(calc($spacing_10_0 + $spacing_4_0));
 
   & .container {
     height: 100%;
