--- a/src/blocks/RegisterAnonymous/register-anonymous.scss
+++ b/src/blocks/RegisterAnonymous/register-anonymous.scss
@@ -2,10 +2,10 @@
 
 .register-anonymous {
   // 100vh - height of header - the padding-top
-  height: calc(100vh - $spacing_12_0);
+  @include full-height-page(calc($spacing_12_0));
 
   @media screen and (min-width: $screen_md) {
-    height: calc(100vh - $spacing_12_8);
+    @include full-height-page(calc($spacing_12_8));
   }
 
   & .container {
@@ -28,6 +28,7 @@
 
         &__code-text {
           color: $color_blue_3d527b;
+          margin-top: $spacing_8_0;
         }
 
         &__anonymous-code-container {
@@ -45,29 +46,16 @@
           cursor: pointer;
         }
 
-        &__privacy_policy_container {
-          margin-top: $spacing_2_0;
-          display: flex;
-          flex-direction: row;
-          align-items: flex-start;
-
-          & > .checkbox-wrapper {
-            margin-top: $spacing_0_2;
-          }
-
-          & > .text {
-            margin-left: $spacing_0_8;
-            font-weight: $font_medium;
-
-            & .privacy-policy-link {
-              color: $color_secondary_9749fa;
-            }
+        &__input-password {
+          @media screen and (min-width: $screen_md) {
+            margin-top: $spacing_6_4;
           }
         }
 
         & > button {
           margin-top: $spacing_3_2;
           @media screen and (min-width: $screen_md) {
+            margin-top: $spacing_8_0;
             margin-bottom: $spacing_3_2;
           }
         }
@@ -77,5 +65,10 @@
 
   &__redirect-button {
     margin-bottom: $spacing_2_4;
+  }
+
+  & .error-message {
+    margin-left: 0;
+    margin-top: $spacing_1_6;
   }
 }
