Refactor: QA Review of FilterProviders backdrop

--- a/src/backdrops/FilterProviders/filter-providers.scss
+++ b/src/backdrops/FilterProviders/filter-providers.scss
@@ -5,8 +5,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: $spacing_3_6;
+
+    &:has(.dropdown--expanded) {
+      padding-bottom: $spacing_10_0;
+    }
 
     &__inputs-container {
+      &:has(.dropdown--expanded) {
+        padding-bottom: $spacing_10_0;
+      }
       & > * {
         margin-top: $spacing_3_2;
       }
@@ -15,5 +23,8 @@
     & > button {
       margin-top: $spacing_2_4;
     }
+  }
+  & > .dropdown--expanded {
+    margin-bottom: $spacing_3_2;
   }
 }
