--- a/src/pages/UserProfile/user-profile.scss
+++ b/src/pages/UserProfile/user-profile.scss
@@ -2,6 +2,11 @@
 @import "@USupport-components-library/styles";
 
 .page__user-profile {
+  &__radial-circle.purple {
+    top: 3.5rem;
+    left: -15rem;
+    height: 50rem;
+  }
   @media screen and (max-width: $screen-md) {
     background-image: url(../assets/background-spiral.png);
     background-repeat: no-repeat;
