Refactor: QA review

--- a/src/blocks/ProviderOverview/provider-overview.scss
+++ b/src/blocks/ProviderOverview/provider-overview.scss
@@ -1,6 +1,7 @@
 @import "@USupport-components-library/styles";
 
 .provider-overview {
+  padding-bottom: $spacing_4_0;
   width: 100%;
   .container {
     width: 100%;
