--- a/src/backdrops/ConfirmConsultation/confirm-consultation.scss
+++ b/src/backdrops/ConfirmConsultation/confirm-consultation.scss
@@ -4,11 +4,11 @@
   align-items: center;
 
   &__content {
-    width: 28rem;
-    padding: $spacing_4_4 0;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 0 auto;
+    padding: $spacing_4_4 0;
 
     &__mascot {
       width: 20rem;
