--- a/src/blocks/ForgotPassword/forgot-password.scss
+++ b/src/blocks/ForgotPassword/forgot-password.scss
@@ -16,7 +16,13 @@
       display: flex;
       flex: 1;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
+
+      @media screen and (min-width: $screen_md) {
+        & > button {
+          margin-bottom: $spacing_3_2;
+        }
+      }
 
       &__main-container {
         margin-top: $spacing_4_0;
@@ -25,10 +31,9 @@
           margin-top: $spacing_3_2;
         }
       }
-      @media screen and (min-width: $screen_md) {
-        & > button {
-          margin-bottom: $spacing_3_2;
-        }
+
+      &__register-button {
+        margin-top: $spacing_1_6;
       }
     }
   }
