--- a/src/blocks/Login/login.scss
+++ b/src/blocks/Login/login.scss
@@ -40,5 +40,9 @@
         margin-top: $spacing_1_6;
       }
     }
+    &__register-button {
+      margin: 0 auto;
+      margin-top: $spacing_1_6;
+    }
   }
 }
