--- a/src/blocks/RegisterAnonymous/register-anonymous.scss
+++ b/src/blocks/RegisterAnonymous/register-anonymous.scss
@@ -13,9 +13,10 @@
   }
 
   &__grid {
-    height: 100%;
+    min-height: 90vh;
     justify-items: center;
     text-align: left;
+    align-items: center;
 
     &__content-item {
       display: flex;
@@ -24,11 +25,8 @@
       justify-content: space-between;
 
       &__main-component {
-        margin-top: $spacing_4_0;
-
         &__code-text {
           color: $color_blue_3d527b;
-          margin-top: $spacing_8_0;
         }
 
         &__anonymous-code-container {
@@ -54,12 +52,18 @@
 
         & > button {
           margin-top: $spacing_3_2;
+
           @media screen and (min-width: $screen_md) {
             margin-top: $spacing_8_0;
             margin-bottom: $spacing_3_2;
           }
         }
       }
+    }
+
+    &__login-button {
+      margin: 0 auto;
+      margin-top: $spacing_1_6;
     }
   }
 
