Refactor: welcome block to display the active countries and languages extracted from the db

--- a/src/blocks/Welcome/welcome.scss
+++ b/src/blocks/Welcome/welcome.scss
@@ -19,7 +19,7 @@
     }
 
     &__content-item {
-      align-self: end;
+      align-self: start;
       text-align: left;
 
       &__countries-dropdwon {
