Add: nickname field to the RegisterEmail block

--- a/src/blocks/RegisterEmail/register-email.scss
+++ b/src/blocks/RegisterEmail/register-email.scss
@@ -11,7 +11,7 @@
     place-items: center;
     min-height: 90vh;
 
-    &__password-input {
+    & .input-container:not(:first-of-type) {
       padding-top: $spacing_2_4;
     }
 
