Refactor: the UploadPicture backdrop to send the userID and handle the onError in the useMutation call

--- a/src/backdrops/UploadPicture/upload-picture.scss
+++ b/src/backdrops/UploadPicture/upload-picture.scss
@@ -16,6 +16,7 @@
       align-self: center;
       margin: 0 auto;
       margin-top: $spacing_2_4;
+      object-fit: cover;
     }
 
     &__drag-text {
