Add: API connection to the ForgotPassword block

--- a/src/blocks/ForgotPassword/forgot-password.scss
+++ b/src/blocks/ForgotPassword/forgot-password.scss
@@ -36,5 +36,11 @@
         margin-top: $spacing_1_6;
       }
     }
+
+    & .error-message {
+      margin-top: $spacing_2_4;
+      text-align: center;
+      max-width: 34rem;
+    }
   }
 }
