Fix: className's in ProviderOverview block to not collide with the component of the same name

--- a/src/blocks/ProviderOverview/provider-overview.scss
+++ b/src/blocks/ProviderOverview/provider-overview.scss
@@ -1,6 +1,6 @@
 @import "@USupport-components-library/styles";
 
-.provider-overview {
+.provider-overview-block {
   padding-bottom: $spacing_4_0;
   width: 100%;
   .container {
