Add: connect the CancelConsultaiton backdrop to the API

--- a/src/backdrops/CancelConsultation/cancel-consultation.scss
+++ b/src/backdrops/CancelConsultation/cancel-consultation.scss
@@ -2,6 +2,7 @@
 
 .cancel-consultation {
   align-items: center;
+  justify-content: center;
 
   &__provider-consultation {
     margin-top: $spacing_4_0;
