--- a/src/pages/ContactUs/contact-us.scss
+++ b/src/pages/ContactUs/contact-us.scss
@@ -2,6 +2,8 @@
 @import "@USupport-components-library/styles";
 
 .page__contact-us {
+  @include full-height-page-navbar;
+
   &__radial-circle.purple {
     top: 3.5rem;
     left: -7%;
