Fix: MoodTracker icons styling

--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -24,6 +24,10 @@
     margin: 0 auto;
     margin-top: $spacing_2_4;
 
+    & .not-selected {
+      opacity: 0.5;
+    }
+
     & .selected {
       color: $color_black_37;
     }
