--- a/src/blocks/ArticlesDashboard/articles-dashboard.scss
+++ b/src/blocks/ArticlesDashboard/articles-dashboard.scss
@@ -2,6 +2,7 @@
 
 .articles-dashboard {
   text-align: left;
+  padding-bottom: $spacing_0_8;
 
   &__headings-item {
     padding: $spacing_4_0 0 0 $spacing_6_0;
