--- a/src/blocks/ArticlesDashboard/articles-dashboard.scss
+++ b/src/blocks/ArticlesDashboard/articles-dashboard.scss
@@ -50,4 +50,9 @@
   &__view-more-item {
     justify-self: end;
   }
+
+  .view-all-button {
+    color: $color_secondary_9749fa;
+    cursor: pointer;
+  }
 }
