--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -13,6 +13,7 @@
 
   & .mood-tracker-button {
     color: $color_secondary_9749fa;
+    cursor: pointer;
   }
 
   &__rating {
@@ -23,6 +24,11 @@
     max-width: 35rem;
     margin: 0 auto;
     margin-top: $spacing_2_4;
+
+    &__emoticon-container {
+      width: 6.5rem;
+      height: 9rem;
+    }
 
     & .not-selected {
       opacity: 0.5;
