Fix: view all buttons styling in InformationPortal page

--- a/src/pages/InformationPortal/information-portal.scss
+++ b/src/pages/InformationPortal/information-portal.scss
@@ -13,6 +13,11 @@
     }
   }
 
+  & .view-all-button {
+    color: $color_secondary_9749fa;
+    cursor: pointer;
+  }
+
   &__block {
     text-align: left;
   }
