Fix: CancelConsultation backdrop styling

--- a/src/backdrops/CancelConsultation/cancel-consultation.scss
+++ b/src/backdrops/CancelConsultation/cancel-consultation.scss
@@ -4,6 +4,12 @@
   align-items: center;
   justify-content: center;
 
+  &__content-container {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+  }
+
   &__provider-consultation {
     margin-top: $spacing_4_0;
   }
