--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -11,6 +11,17 @@
     width: 100%;
   }
 
+  &__additional-comment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: $spacing_1_8 0;
+
+    &__button-container {
+      margin-top: $spacing_1_6;
+    }
+  }
+
   & .mood-tracker-button {
     color: $color_secondary_9749fa;
     cursor: pointer;
