--- a/src/blocks/Page/page.scss
+++ b/src/blocks/Page/page.scss
@@ -27,7 +27,7 @@
   }
 
   &__header {
-    align-items: flex-start;
+    align-items: center;
     display: flex;
     flex: 1;
     padding: $spacing_3_2 $spacing_1_6 $spacing_1_6 $spacing_2_4;
