--- a/src/blocks/VideoRoom/video-room.scss
+++ b/src/blocks/VideoRoom/video-room.scss
@@ -5,33 +5,82 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
+  min-width: 100vw;
+  position: relative;
+
+  @media screen and (min-width: 1024px) {
+    min-width: calc(100vw - 50rem);
+    margin-left: $spacing_3_0;
+    margin-right: $spacing_2_2;
+  }
 
   &__participants {
     position: relative;
+    min-height: 100vh;
+    min-width: 100vw;
 
-    @media screen and (min-width: $screen-md) {
+    @media screen and (min-width: 1024px) {
       flex-direction: row;
       justify-content: space-between;
-      min-width: 64rem;
+      min-width: calc(100vw - 50em);
       min-height: 48rem;
     }
   }
 
-  &__local-participant,
-  &__remote-participant {
-    video {
-      width: 100%;
-      height: 50%;
-      margin: 0 auto;
-      transform: scaleX(-1);
+  .video-off {
+    align-items: center;
+    background-color: $color_gray_a6b4b8;
+    border: 1px solid $color_primary_20809e;
+    display: flex;
+    justify-content: center;
+  }
+
+  & .remote-video,
+  & .remote-video-off.video-off {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    object-fit: cover;
+    transform: scaleX(-1);
+
+    @media screen and (min-width: 1024px) {
+      width: calc(100vw - 50rem);
+      border-radius: 2.5rem;
+      max-height: 80vh;
     }
+  }
+
+  & .local-video,
+  & .local-video-off.video-off {
+    width: 13rem;
+    height: 13rem;
+    object-fit: cover;
+    position: absolute;
+    bottom: 0.5rem;
+    right: $spacing_1_8;
+    z-index: 2;
+    transform: scaleX(-1);
+    border-radius: 2.5rem;
+
+    @media screen and (min-width: 1024px) {
+      width: 19rem;
+      height: 19rem;
+    }
+  }
+
+  & .local-video-off.video-off,
+  & .remote-video-off.video-off {
+    transform: scaleX(1);
   }
 
   @media screen and (min-width: $screen-md) {
     &__local-participant {
+      bottom: 0;
       position: absolute;
       right: 0;
-      bottom: 0;
       width: 25rem;
       z-index: 2;
     }
@@ -39,7 +88,12 @@
 
   & .controls {
     margin-bottom: $spacing_2_4;
-    // position: absolute;
-    // z-index: $z-index-emergency-button;
+    position: absolute;
+    z-index: 2;
+
+    @media screen and (min-width: $screen-md) {
+      left: $spacing_0_8;
+      top: $spacing_0_8;
+    }
   }
 }
