--- a/src/blocks/ArticleView/article-view.scss
+++ b/src/blocks/ArticleView/article-view.scss
@@ -54,11 +54,12 @@
       background-color: $color_blue_20809E_0_3;
       border-radius: $border_radius_2_5;
       padding: 0 $spacing_1_2 0 $spacing_1_2;
-      margin-left: 2rem;
+      margin-left: $spacing_1_0;
 
       .small-text {
         font-weight: $font_bold;
         color: $color_blue_3d527b;
+        white-space: nowrap;
       }
     }
 
@@ -68,7 +69,7 @@
 
     .icon {
       margin-right: $spacing_0_5;
-      margin-left: $spacing_1_6;
+      margin-left: $spacing_1_0;
     }
   }
 
