--- a/src/modals/SaveAccessCodeConfirmation/save-access-code-confirmation.scss
+++ b/src/modals/SaveAccessCodeConfirmation/save-access-code-confirmation.scss
@@ -13,4 +13,18 @@
       width: 90%;
     }
   }
+
+  &__checkbox-container {
+    display: flex;
+    justify-content: center;
+    margin-top: $spacing_2_4;
+
+    & .checkbox-wrapper {
+      margin-right: $spacing_0_8;
+    }
+
+    & p {
+      cursor: pointer;
+    }
+  }
 }
