Fix: height in ArticlesDashboard, ArticleInformation and UserProfile pages

--- a/src/pages/ArticleInformation/article-information.scss
+++ b/src/pages/ArticleInformation/article-information.scss
@@ -1,6 +1,8 @@
 @import "@USupport-components-library/styles";
 
 .page__article-information {
+  @include full-height-page-navbar;
+
   &__more-articles {
     padding-top: $spacing_4_0;
     padding-bottom: $spacing_5_6;
