--- a/src/blocks/ArticlesDashboard/articles-dashboard.scss
+++ b/src/blocks/ArticlesDashboard/articles-dashboard.scss
@@ -19,7 +19,7 @@
   }
 
   &__categories-item {
-    overflow-x: scroll;
+    overflow-x: auto;
     width: 35rem;
     padding-top: $spacing_1_0;
 
