--- a/src/pages/UserProfile/user-profile.scss
+++ b/src/pages/UserProfile/user-profile.scss
@@ -2,6 +2,8 @@
 @import "@USupport-components-library/styles";
 
 .page__user-profile {
+  @include full-height-page-navbar;
+
   &__radial-circle.purple {
     top: 3.5rem;
     left: -15rem;
