Fix: articles block, scroll bar removed

--- a/src/blocks/Articles/articles.scss
+++ b/src/blocks/Articles/articles.scss
@@ -27,7 +27,7 @@
   }
 
   &__categories-item {
-    overflow-x: scroll;
+    overflow-x: auto;
     width: 35rem;
 
     @media screen and (min-width: $screen-md) {
