Fix: moodtracker block styling

--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -9,6 +9,10 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+
+    > h4 {
+      text-align: left;
+    }
   }
 
   &__additional-comment {
@@ -30,14 +34,16 @@
   &__rating {
     display: flex;
     flex-direction: row;
-    width: 34.3rem;
     justify-content: space-between;
     max-width: 35rem;
     margin: 0 auto;
     margin-top: $spacing_2_4;
+    width: 100%;
+    max-width: 42rem;
+    background-color: gold;
 
     &__emoticon-container {
-      width: 6.5rem;
+      width: 6rem;
       height: 9rem;
     }
 
