Fix: ConsultationsDashboard block heading styling

--- a/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
+++ b/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
@@ -10,6 +10,10 @@
     justify-content: space-between;
     align-items: center;
 
+    > h4 {
+      text-align: left;
+    }
+
     .view-all-button {
       color: $color_secondary_9749fa;
       cursor: pointer;
