--- a/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
+++ b/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
@@ -32,4 +32,11 @@
   &__carousel-container {
     margin-top: $spacing_2_0;
   }
+
+  &__consultation-container {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+  }
 }
