Add: cursor pointer to the days of week in SelectConsultation

--- a/src/backdrops/SelectConsultation/select-consultation.scss
+++ b/src/backdrops/SelectConsultation/select-consultation.scss
@@ -18,6 +18,10 @@
 
     & .header {
       padding-bottom: $spacing_1_8;
+
+      &__day-of-week {
+        cursor: pointer;
+      }
     }
 
     &__slots {
