Fix: MoodTrackHistory block empty state

--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -4,6 +4,7 @@
   &__content-container {
     display: flex;
     flex-direction: row;
+    margin-top: $spacing_1_6;
 
     &__emoticons-container {
       display: flex;
