Fix: Dashboard components styling

--- a/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
+++ b/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
@@ -17,6 +17,7 @@
     .view-all-button {
       color: $color_secondary_9749fa;
       cursor: pointer;
+      padding: $spacing_1_6 0;
     }
   }
 
