--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -29,6 +29,7 @@
   & .mood-tracker-button {
     color: $color_secondary_9749fa;
     cursor: pointer;
+    padding: $spacing_1_6 0;
   }
 
   &__rating {
@@ -44,6 +45,7 @@
     &__emoticon-container {
       width: 6rem;
       height: 9rem;
+      cursor: pointer;
     }
 
     & .not-selected {
