Fix: MoodTrackHistory block styling

--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -69,6 +69,7 @@
     align-items: center;
     justify-content: center;
     min-height: 24rem;
+    padding-bottom: $spacing_3_2;
   }
 
   &__icon-container {
