--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -70,6 +70,7 @@
     align-items: center;
     justify-content: center;
     min-height: 24rem;
+    padding-bottom: $spacing_3_2;
   }
 
   &__icon-container {
