--- a/src/blocks/MyQA/my-qa.scss
+++ b/src/blocks/MyQA/my-qa.scss
@@ -41,6 +41,10 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: $spacing_4_6;
+
+    &__no-questions {
+      margin: $spacing_2_4 auto;
+    }
   }
 
   &__answer {
