--- a/src/modals/QuestionDetails/question-details.scss
+++ b/src/modals/QuestionDetails/question-details.scss
@@ -21,6 +21,7 @@
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     &__text {
       color: $color_primary_20809e;
@@ -32,6 +33,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
     &__label {
       margin: 0 $spacing_0_4 $spacing_0_4 $spacing_0_4;
     }
@@ -49,7 +51,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      margin-top: $spacing_1_6;
+      margin-top: $spacing_1_8;
     }
 
     &__archive-button {
@@ -65,6 +67,11 @@
     display: flex;
     flex-direction: "row";
     margin-top: $spacing_1_0;
+    align-items: center;
+
+    @media screen and (min-width: $screen-md) {
+      margin-top: 0;
+    }
 
     &__avatar {
       margin: 0 $spacing_0_4;
@@ -75,6 +82,7 @@
     margin-top: $spacing_2_6;
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 
     @media screen and (min-width: $screen-md) {
       margin-top: 0;
