--- a/src/blocks/Page/page.scss
+++ b/src/blocks/Page/page.scss
@@ -15,7 +15,7 @@
   }
 
   @media screen and (min-width: 1050px) {
-    padding-top: $spacing_8_0;
+    // padding-top: $spacing_8_0;
     &--no-additional-top-padding {
       padding-top: 0;
     }
