Fix: InformationPortal page styling

--- a/src/pages/InformationPortal/information-portal.scss
+++ b/src/pages/InformationPortal/information-portal.scss
@@ -7,6 +7,7 @@
     text-align: left;
     background: $gradient_secondary_0_3_opacity;
     border-radius: 0 0 0 $spacing_10_0;
+    padding-top: $spacing_2_0;
 
     @media screen and (min-width: $screen-md) {
       height: 17.4rem;
