--- a/src/pages/Consultation/consultation.scss
+++ b/src/pages/Consultation/consultation.scss
@@ -69,12 +69,26 @@
     height: 60%;
     padding-bottom: 1.6rem;
 
+    & .base-modal__body {
+      overflow: hidden;
+      position: relative;
+    }
+
     &.backdrop__shown {
       top: 40%;
     }
 
     & .send-message {
       margin-bottom: $spacing_0_4;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin-bottom: 10px;
+
+      @media screen and (min-width: $screen-md) {
+        position: absolute;
+      }
     }
 
     &__container {
@@ -83,6 +97,7 @@
       justify-content: space-between;
       height: 100%;
       padding: 0 $spacing_0_4;
+      position: relative;
     }
   }
 }
